--- a/Git/blogspot.html
+++ b/Git/blogspot.html
@@ -5,6 +5,9 @@
     </head>
 
     <body>
+        <div id="Cabecera">
+            Cabecera
+        </div>
         <h1>Texto 1</h1>
         <p> Parrafo </p>
         <p> Segundo Parrafo </p>
