--- a/Git/blogspot.html
+++ b/Git/blogspot.html
@@ -6,7 +6,7 @@
 
     <body>
         <div id="Cabecera">
-            Cabecera
+            Cabecera 2.0
         </div>
         <h1>Texto 1</h1>
         <p> Parrafo </p>
