--- a/Git/blogspot.html
+++ b/Git/blogspot.html
@@ -8,5 +8,6 @@
         <h1>Texto 1</h1>
         <p> Parrafo </p>
         <p> Segundo Parrafo </p>
+        <p> Adivinen, mas texto </p>
     </body>
 </html>
