--- a/Git/blogspot.html
+++ b/Git/blogspot.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Easdfdg </title>
+        <title> Easdfdg AAAAAAAAAAAAA </title>
         <link rel="stylesheet" href="style.css">
     </head>
 
